version/0.2/_sources/examples/simulator/doc_EP-mechanics_simulator_fullheart_rodero.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/simulator/doc_EP-mechanics_simulator_fullheart_rodero.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_simulator_doc_EP-mechanics_simulator_fullheart_rodero.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_simulator_doc_EP-mechanics_simulator_fullheart_rodero.py:


Full heart EP-mechanics
-----------------------
This example shows you how to consume a full heart model and
set it up for a coupled electromechanical simulation.

.. GENERATED FROM PYTHON SOURCE LINES 32-41

Example setup
-------------
before computing the fiber orientation, purkinje network we need to load
the required modules, load a heart model and set up the simulator.

Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules and set relevant paths, including that of the working
directory, model, and ls-dyna executable.

.. GENERATED FROM PYTHON SOURCE LINES 41-49

.. code-block:: default



    import os

    import ansys.heart.preprocessor.models as models
    from ansys.heart.simulator.simulator import DynaSettings, EPMechanicsSimulator
    from pint import Quantity


.. GENERATED FROM PYTHON SOURCE LINES 54-60

Example setup
-------------
Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules and set relevant paths, including that of the working
directory and generated model

.. GENERATED FROM PYTHON SOURCE LINES 60-72

.. code-block:: default



    # accept dpf license aggrement
    # https://dpf.docs.pyansys.com/version/stable/getting_started/licensing.html#ref-licensing
    os.environ["ANSYS_DPF_ACCEPT_LA"] = "Y"

    # specify necessary paths.
    # Note that we need to cast the paths to strings to facilitate serialization.
    case_file = os.path.join("pyansys-heart", "downloads", "Rodero2021", "01", "01.vtk")
    workdir = os.path.join(os.path.dirname(case_file), "FullHeart")
    path_to_model = os.path.join(workdir, "heart_model.pickle")


.. GENERATED FROM PYTHON SOURCE LINES 76-78

Load the full heart model
~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 78-82

.. code-block:: default


    # instantiate a four chamber model
    model: models.FullHeart = models.HeartModel.load_model(path_to_model)


.. GENERATED FROM PYTHON SOURCE LINES 83-86

Instantiate the simulator object
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
instantiate the simulator and settings appropriately.

.. GENERATED FROM PYTHON SOURCE LINES 86-123

.. code-block:: default


    # instantaiate dyna settings of choice
    lsdyna_path = r"mppdyna_d_sse2_linux86_64_intelmmpi_105630"
    dyna_settings = DynaSettings(
        lsdyna_path=lsdyna_path, dynatype="intelmpi", platform="wsl", num_cpus=6
    )

    # instantiate simulator object
    simulator = EPMechanicsSimulator(
        model=model,
        dyna_settings=dyna_settings,
        simulation_directory=os.path.join(workdir, "ep-mechanics"),
    )

    # load default simulation settings
    simulator.settings.load_defaults()

    # compute fiber orientation in the ventricles and atria
    simulator.compute_fibers()
    simulator.compute_left_atrial_fiber()
    simulator.compute_right_atrial_fiber(appendage=[39, 29, 98])

    # switch atria to active
    simulator.model.left_atrium.has_fiber = True
    simulator.model.left_atrium.is_active = True

    simulator.model.right_atrium.has_fiber = True
    simulator.model.right_atrium.is_active = True

    # Estimate the stress-free-configuration
    simulator.compute_stress_free_configuration()

    # Compute the conduction system
    simulator.compute_purkinje()
    simulator.compute_conduction_system()



.. GENERATED FROM PYTHON SOURCE LINES 124-126

Start main simulation
~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 126-131

.. code-block:: default

    simulator.settings.mechanics.analysis.end_time = Quantity(800, "ms")
    simulator.settings.mechanics.analysis.dt_d3plot = Quantity(10, "ms")

    simulator.model.dump_model(os.path.join(workdir, "heart_fib_beam.pickle"))


.. GENERATED FROM PYTHON SOURCE LINES 132-135

.. note::
   A constant pressure is prescribed to the atria.
   No circulation system is coupled with the atria.

.. GENERATED FROM PYTHON SOURCE LINES 135-139

.. code-block:: default


    # start main simulation
    simulator.simulate()


.. GENERATED FROM PYTHON SOURCE LINES 140-141

Result in LS-PrePost

.. GENERATED FROM PYTHON SOURCE LINES 143-147

.. video:: ../../_static/images/doc_Christobal01_epmeca_fh.mp4
  :width: 600
  :loop:
  :class: center


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.000 seconds)


.. _sphx_glr_download_examples_simulator_doc_EP-mechanics_simulator_fullheart_rodero.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: doc_EP-mechanics_simulator_fullheart_rodero.py <doc_EP-mechanics_simulator_fullheart_rodero.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: doc_EP-mechanics_simulator_fullheart_rodero.ipynb <doc_EP-mechanics_simulator_fullheart_rodero.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
